unpackaged/main/default/objects/blng__RevenueRecognitionTreatment__c/blng__RevenueRecognitionTreatment__c.object-meta.xml
<CustomObject>
    <label>Revenue Recognition Treatment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Recognition Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>