unpackaged/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__ProcessingOrder__c.field-meta.xml
<CustomField>
    <fullName>blng__ProcessingOrder__c</fullName>
    <inlineHelpText>Saisissez 1 si le traitement du revenu doit être effectué avant les autres traitements, 2 s&#39;il doit être effectué en deuxième position, etc.</inlineHelpText>
    <label>Processing Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>