unpackaged/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__RevenueDistributionMethod__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueDistributionMethod__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Méthode de distribution du revenu utilisée pour l&#39;attribution de révisions à travers les périodes</inlineHelpText>
    <label>Revenue Distribution Method</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6) OR (7 AND 8) OR (9 AND 10)</booleanFilter>
        <errorMessage>Revenue Distribution Methods of Type &quot;Order&quot; can be selected for &quot;Order Activation&quot; and Type &quot;Invoice&quot; can be selected for &quot;Invoice Posting&quot; and same for &quot;Credit Note&quot;, &quot;Debit Note&quot; and &quot;Other&quot;</errorMessage>
        <filterItems>
            <field>$Source.blng__RevenueScheduleCreationAction__c</field>
            <operation>equals</operation>
            <value>Order Activation</value>
        </filterItems>
        <filterItems>
            <field>blng__RevenueDistributionMethod__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Order</value>
        </filterItems>
        <filterItems>
            <field>$Source.blng__RevenueScheduleCreationAction__c</field>
            <operation>equals</operation>
            <value>Invoice Posting</value>
        </filterItems>
        <filterItems>
            <field>blng__RevenueDistributionMethod__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filterItems>
        <filterItems>
            <field>$Source.blng__RevenueScheduleCreationAction__c</field>
            <operation>equals</operation>
            <value>Credit Note Posting</value>
        </filterItems>
        <filterItems>
            <field>blng__RevenueDistributionMethod__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Credit Note</value>
        </filterItems>
        <filterItems>
            <field>$Source.blng__RevenueScheduleCreationAction__c</field>
            <operation>equals</operation>
            <value>Debit Note Posting</value>
        </filterItems>
        <filterItems>
            <field>blng__RevenueDistributionMethod__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Debit Note</value>
        </filterItems>
        <filterItems>
            <field>$Source.blng__RevenueScheduleCreationAction__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </filterItems>
        <filterItems>
            <field>blng__RevenueDistributionMethod__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </filterItems>
        <infoMessage>Revenue Distribution Methods of Type &quot;Order&quot; can be selected for &quot;Order Posting&quot; and Type &quot;Invoice&quot; can be selected for &quot;Invoice Posting&quot; and same for &quot;Credit Note&quot;, &quot;Debit Note&quot; and &quot;Other&quot;</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>blng__RevenueDistributionMethod__c</referenceTo>
    <relationshipLabel>Revenue Recognition Treatments (Revenue Distribution Method)</relationshipLabel>
    <relationshipName>RevenueDistributionMethodRRTreatments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>