unpackaged/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__RevenueGLRule__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueGLRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Référence à la règle du grand livre</inlineHelpText>
    <label>Revenue GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Revenue Recognition Treatments (Revenue GL Rule)</relationshipLabel>
    <relationshipName>GLRuleRevenueRecognitionTreatments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>