unpackaged/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__RevenueScheduleAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueScheduleAmount__c</fullName>
    <inlineHelpText>Sélectionnez le type de revenu à comptabiliser dans ce calendrier de revenu</inlineHelpText>
    <label>Revenue Schedule Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueScheduleAmount</valueSetName>
    </valueSet>
</CustomField>