unpackaged/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__RevenueScheduleCreationAction__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueScheduleCreationAction__c</fullName>
    <inlineHelpText>Type d&#39;événement qui déclenche la création du calendrier de revenu.</inlineHelpText>
    <label>Revenue Schedule Creation Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueScheduleCreationAction</valueSetName>
    </valueSet>
</CustomField>