unpackaged/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__Type__c.field-meta.xml
<CustomField>
    <fullName>blng__Type__c</fullName>
    <inlineHelpText>Mode de calcul du montant : pourcentage du total, montant fixe ou reste une fois les autres traitements effectués</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueRecognitionTreatmenType</valueSetName>
    </valueSet>
</CustomField>