unpackaged/main/default/objects/blng__RevenueRecognitionTreatment__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__Active__c</columns>
    <columns>blng__RevenueDistributionMethod__c</columns>
    <columns>blng__RevenueGLRule__c</columns>
    <columns>blng__RevenueRecognitionRule__c</columns>
    <columns>blng__RevenueFinanceBook__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>